added router to components & day 1 blog post to Blog.js component

--- a/app/cs-bw/package.json
+++ b/app/cs-bw/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Game of Life by Erica Ingram",
+  "name": "ELIs-Game-of-Life",
   "version": "0.1.0",
 	"description": "Game of Life app",
 	"repository": "https://github.com/evoingram/cs-bw",
