--- a/app/cs-bw/package.json
+++ b/app/cs-bw/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ELIs-Game-of-Life",
   "version": "0.1.0",
-	"description": "Game of Life app",
-	"repository": "https://github.com/evoingram/cs-bw",
-	"author": "Erica L. Ingram <evoingram@aquoco.onmicrosoft.com> (https://elicgol.now.sh/)",
+  "description": "Game of Life app",
+  "repository": "https://github.com/evoingram/cs-bw",
+  "author": "Erica L. Ingram <evoingram@aquoco.onmicrosoft.com> (https://elicgol.now.sh/)",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -12,6 +12,7 @@
     "canvas": "^2.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "styled-components": "^5.1.1"
   },
